logs/Slang/generated/hdlconv/hdlconvertor_p493.sv.log
name: hdlconvertor_p493
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:1:1: error: expected member
checker my_check(logic clk, active);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:1:35: error: expected declarator
checker my_check(logic clk, active);
                                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:6:1: error: language feature not yet supported
covergroup cg_active @(posedge clk);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:19:1: error: use of undeclared identifier 'cg_active'
cg_active cg_active_1 = new();
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:19:25: error: language feature not yet supported
cg_active cg_active_1 = new();
                        ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p493.sv:20:1: error: expected member
endchecker : my_check
^~~~~~~~~~
